# mortgage-rates-canada

./: .gitignore  README.md  ROADMAP.md  rates.json
.github/: secret_scanning.yml
.github/workflows/: ci.yml  scrape.yml
history/: 2026-04-27.json  2026-04-28.json  2026-04-29.json  2026-04-30.json  2026-05-01.json  2026-05-02.json  2026-05-03.json  2026-05-04.json  2026-05-05.json  2026-05-06.json  2026-05-07.json  2026-05-08.json  2026-05-09.json  2026-05-10.json  2026-05-11.json  2026-05-12.json  2026-05-13.json  2026-05-14.json  2026-05-15.json  2026-05-16.json  2026-05-17.json
scraper/: .gitignore  README.md  pyproject.toml
scraper/config/: discounts.yaml
scraper/core/: cli.py  discount.py  models.py  publisher.py  runner.py  validator.py
scraper/lenders/: _playwright.py  alterna.py  atb.py  base.py  bmo.py  cibc.py  coast_capital.py  manual_base.py  meridian.py  national.py  rbc.py  scotiabank.py  servus.py  tangerine.py  td.py  vancity.py
scraper/scripts/: capture_all.py  capture_fixture.py  manual_capture.py  probe.py  refresh_rates.py
scraper/tests/: conftest.py  test_base.py  test_discount.py  test_lenders.py  test_manual_base.py  test_models.py  test_playwright_helper.py  test_publisher.py  test_runner.py  test_validator.py
scraper/tests/fixtures/: alterna.html  atb.html  cibc.html  coast-capital.html  meridian.html  national.html  rbc.html  servus.html  tangerine.html  td.html  vancity.html
site/: .gitignore  astro.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
site/plugins/: remark-glossary-autolink.mjs
(+109 files in other folders)
