[project]
name = "mortgage-rates-scraper"
version = "0.1.0"
description = "Scrapes Canadian mortgage posted rates and emits rates.json"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "playwright>=1.45",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.uv]
package = false
